--- a/pom.xml
+++ b/pom.xml
@@ -19,16 +19,18 @@
 
     <!--third package version definition including plugs、datadb、tools、grpc、mysql and others-->
     <properties>
-        <!--configuration-->
         <junit.test.version>4.12</junit.test.version>
 
-        <!--plugs-->
+        <!--tools-->
         <hutool.version>5.7.21</hutool.version>
 
         <lombok.version>1.18.20</lombok.version>
         <lombok.mapstruct.binding.version>0.1.0</lombok.mapstruct.binding.version>
 
         <mapstruct.version>1.4.2.Final</mapstruct.version>
+
+        <!--plugins-->
+        <maven.assembly.version>3.4.2</maven.assembly.version>
     </properties>
 
     <dependencyManagement>
