--- a/grpc-framework-project-generator/src/main/resources/slt/source/yml/application-dev.properties
+++ b/grpc-framework-project-generator/src/main/resources/slt/source/yml/application-dev.properties
@@ -1,8 +1,12 @@
-${application-apiProperties}
-${application-applicationProperties}
-${application-commonProperties}
-${application-fixedProperties}
-${application-grpcProperties}
-${application-persistenceProperties}
-${application-protoProperties}
-${application-restfulProperties}
+#springboot Server
+spring.application.name=${projectName}
+spring.aop.auto=true
+spring.aop.proxy-target-class=true
+
+logging.config=classpath:log4j2.xml
+logging.level.root=INFO
+logging.level.org.springframework.web=ERROR
+
+app-properties.token-key=${tokenKey}
+app-properties.http-api-path=${apiPath}
+
