--- a/grpc-framework-project-generator/src/main/resources/slt/source/yml/application-grpc.properties
+++ b/grpc-framework-project-generator/src/main/resources/slt/source/yml/application-grpc.properties
@@ -1,5 +1,3 @@
-grpc.server.port=9898
+#GRPC Server
+grpc.server.port=${grpcPort}
 grpc.server.in-process-name=native
-grpc.client.inProcess.address=in-process:native
-grpc.client.inProcess.enableKeepAlive=true
-grpc.client.inProcess.keepAliveWithoutCalls=true
