--- a/grpc-framework-project-generator/src/main/resources/slt/source/yml/application-restful.properties
+++ b/grpc-framework-project-generator/src/main/resources/slt/source/yml/application-restful.properties
@@ -1,10 +1,11 @@
-server.port=18080
+#restful Server
+server.port=${port}
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/octet-stream
 
 swagger-config.enabled=true
-swagger-config.title=GrpcFramework-API
-swagger-config.description=GrpcFramework-Server-Restful-API
-swagger-config.version=V1.0
+swagger-config.title=${projectName}-API
+swagger-config.description=${projectName}-Server-Restful-API
+swagger-config.version=${parentVersion}
 swagger-config.base-package=com.zd.baseframework.core.restful
-swagger-config.authorization-key-name=token
+swagger-config.authorization-key-name=${tokenKey}
