--- a/grpc-framework-project-generator/src/main/resources/slt/source/yml/application-persistence.properties
+++ b/grpc-framework-project-generator/src/main/resources/slt/source/yml/application-persistence.properties
@@ -1,8 +1,9 @@
+#mybatis Server
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/badCase?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://${dbIp}:${dbPort}/${dbName}?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.username=${dbUsername}
+spring.datasource.password=${dbPassword}
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.min-idle=5
 spring.datasource.druid.max-active=20
@@ -16,7 +17,7 @@ spring.datasource.druid.time-between-eviction-runs-millis=60000
 spring.datasource.druid.min-evictable-idle-time-millis=100000
 spring.datasource.druid.filters=stat
 
-mybatis-plus.mapper-locations=classpath:/mybatis/*Mapper.xml
+mybatis-plus.mapper-locations=classpath:/${mapper}/*Mapper.xml
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 mybatis-plus.configuration.default-statement-timeout=20000
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
